--- a/style.css
+++ b/style.css
@@ -1,8 +1,37 @@
-body {background-color: white;
-      color: #003459;
-      font-family: sans-serif;
-      font-size: 1.5vw;}
-h1 {color: #00A8E8;
+body {background-color: #282c35;
+    color: white;
+    font-family: sans-serif;
+    font-size: 1.5vw;
+    padding: 0;
+    margin: 0;}
+
+p {padding: 2%}
+
+h1 {color: #f98728;
     font-family: 'Roboto';
-    font-size: 2vw;
+    font-size: 3vw;
     text-align: center;}
+
+nav {list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto';
+    font-size: 1.8vw;}
+
+ul {list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #21242b;
+    width: 100%}
+
+li {float: left;}
+
+a {display: block;
+    padding: 10px 20px;
+    text-decoration: none;
+    text-align: center;
+    color: white;}
+
+.active {color: #f98728;}
+a:hover {background-color: #2c313c;}
